--- a/Ejerciciouno.html
+++ b/Ejerciciouno.html
@@ -8,7 +8,7 @@
     <main>
         <a-scene>
             <a-assets>
-                <img id="sky" src="img/newyork.jpg">
+                <img id="sky" src="img/bogota.jpg">
             </a-assets>
             <a-cone position="-0.5 0.5 -14" rotation="0 0 0" color="#0584E3" shadow></a-cone>
             <a-sphere position="-0.8 0.4 -13.1" radius="0.5" color="#8D03E2" shadow></a-sphere>
