--- a/Ejerciciodos.html
+++ b/Ejerciciodos.html
@@ -3,16 +3,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
 </head>
 <body>
+    <script>
+        AFRAME.registerComponent('modify-materials', {
+          init: function () {
+            // Wait for model to load.
+            this.el.addEventListener('model-loaded', () => {
+              // Grab the mesh / scene.
+              const obj = this.el.getObject3D('mesh');
+              // Go over the submeshes and modify materials we want.
+              obj.traverse(node => {
+                if (node.name.indexOf('ship') !== -1) {
+                  node.material.color.set('red');
+                }
+              });
+            });
+          }
+        });
+    </script>
     <main>
         <a-scene>
+            <a-entity text="value: Hello World;"></a-entity>
             <a-assets>
-                <img id="sanjuan" src="img/sanjuan.jpg">
-                <img id="puerto" src="img/puerto.jpg" >
-                <img id="bogota" src="img/bogota.jpg" >
+                <img id="cobeñas" src="img/cobeñas2.jpg">
+                <img id="manizales" src="img/manizales2.jpg" >
+                <img id="bogota" src="img/bogota2.jpg" >
+                <img id="guatape" src="img/guatape2.jpg" >
+                <a-asset-item id="pickrick" src="glb/pickrick.glb"></a-asset-item>
             </a-assets>
-            <a-image src="#sanjuan" position="-1.5 1.8 -3" onclick="show('sanjuan')"></a-image>
-            <a-image src="#puerto" position="0 1.8 -3" onclick="show('puerto')"></a-image>
-            <a-image src="#bogota" position="1.5 1.8 -3" onclick="show('bogota')"></a-image>
+            <a-entity gltf-model="#pickrick" scale="0.01 0.01 0.01" position="-1 0 -3" modify-materials></a-entity>
+            <a-image src="#cobeñas" position="-1.5 1.8 -3" onclick="show('cobeñas')" ></a-image>
+            <a-image src="#manizales" position="0 1.8 -3" onclick="show('manizales')"></a-image>
+            <a-image src="#guatape" position="1.5 1.8 -3" onclick="show('guatape')"></a-image>
+            <a-image src="#bogota" position="3 1.8 -3" onclick="show('bogota')"></a-image>
             <a-sky src="#bogota" id="sky" ></a-sky>
             <a-camera>
                 <a-cursor color="blue"></a-cursor>
