--- a/Ejerciciodos.html
+++ b/Ejerciciodos.html
@@ -28,13 +28,14 @@
                 <img id="manizales" src="img/manizales2.jpg" >
                 <img id="bogota" src="img/bogota2.jpg" >
                 <img id="guatape" src="img/guatape2.jpg" >
-                <a-asset-item id="pickrick" src="glb/pickrick.glb"></a-asset-item>
             </a-assets>
-            <a-entity gltf-model="#pickrick" scale="0.01 0.01 0.01" position="-1 0 -3" modify-materials></a-entity>
-            <a-image src="#cobeñas" position="-1.5 1.8 -3" onclick="show('cobeñas')" ></a-image>
-            <a-image src="#manizales" position="0 1.8 -3" onclick="show('manizales')"></a-image>
-            <a-image src="#guatape" position="1.5 1.8 -3" onclick="show('guatape')"></a-image>
-            <a-image src="#bogota" position="3 1.8 -3" onclick="show('bogota')"></a-image>
+              <a-image src="#cobeñas" position="-1.5 1.8 -3" onclick="show('cobeñas')" ></a-image>
+              <a-image src="#manizales" position="0 1.8 -3" onclick="show('manizales')"></a-image>
+              <a-image src="#guatape" position="1.5 1.8 -3" onclick="show('guatape')"></a-image>
+              <a-image src="#bogota" position="3 1.8 -3" onclick="show('bogota')"></a-image>
+            <a-asset-item id="pickrick" src="img/pickrick.glb">
+            </a-asset-item>
+              <a-entity gltf-model="#pickrick" scale="0.01 0.01 0.01" position="-1 0 -3" modify-materials></a-entity>        
             <a-sky src="#bogota" id="sky" ></a-sky>
             <a-camera>
                 <a-cursor color="blue"></a-cursor>
