added four thematics

--- a/preposiciones.html
+++ b/preposiciones.html
@@ -33,6 +33,7 @@
               <a-image src="#manizales" position="0 1.8 -3" onclick="show('manizales')"></a-image>
               <a-image src="#guatape" position="1.5 1.8 -3" onclick="show('guatape')"></a-image>
               <a-image src="#bogota" position="3 1.8 -3" onclick="show('bogota')"></a-image>
+                <a-text font="mozillavr" color="yellow" value="LAS PREPOSICIONES" position="-0.5 2.5 -2"></a-text>
             <a-asset-item id="pickrick" src="img/pickrick.glb">
             </a-asset-item>
               <a-entity gltf-model="#pickrick" scale="0.01 0.01 0.01" position="-1 0 -3" modify-materials></a-entity>        
