--- a/index.html
+++ b/index.html
@@ -7,19 +7,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
     <div class="topnav">
-        <h1 class="logo">Esteban Posada</h1>
-        <a class="active" href="" id="ejerciciouno">Ejercicio 1</a>
-        <a class="item" href="" id="ejerciciodos">Ejercicio 2</a>
+        <h1 class="logo">Virtual city</h1>
+     
     </div>
     <div id="contenedor">
+        <p>
+            <button type="button1" id="ejerciciouno" class="btn btn-primary btn-lg">Animales Marinos</button>
+            <button type="button2" id="ejerciciodos" class="btn btn-success btn-lg">Estaciones del año</button>
+            <button type="button3" id="ejerciciotres" class="btn btn-warning btn-lg">Partes del cuerpo</button>
+            <button type="button4" id="ejerciciocuatro" class="btn btn-info btn-lg">Preposiciones</button>
+        </p>
         <div id="contenedorejercicio"></div>
     </div>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
     <script src="js/CargarEjercicio.js"></script>
+    <script src="js/cargatematica.js"></script>
     <script src="js/tour.js"></script>
 </body>
 </html>
