--- a/animalesmarinos.html
+++ b/animalesmarinos.html
@@ -24,22 +24,15 @@
         <a-scene>
             <a-entity text="value: Hello World;"></a-entity>
             <a-assets>
-                <img id="cobeñas" src="img/cobeñas2.jpg">
-                <img id="manizales" src="img/manizales2.jpg" >
-                <img id="bogota" src="img/bogota2.jpg" >
-                <img id="guatape" src="img/guatape2.jpg" >
+                <img id="pacific" src="img/pacificocean.jpg">
+                <img id="artic" src="img/articocean.jpg" >
             </a-assets>
-              <a-image src="#cobeñas" position="-1.5 1.8 -3" onclick="show('cobeñas')" ></a-image>
-              <a-image src="#manizales" position="0 1.8 -3" onclick="show('manizales')"></a-image>
-              <a-image src="#guatape" position="1.5 1.8 -3" onclick="show('guatape')"></a-image>
-              <a-image src="#bogota" position="3 1.8 -3" onclick="show('bogota')"></a-image>
+              <a-image src="#pacific" position="-1.5 1.8 -3" onclick="show('pacific')" ></a-image>
+              <a-image src="#artic" position="0 1.8 -3" onclick="show('artic')"></a-image>
                 <a-text font="mozillavr" color="blue" value="LOS ANIMALES MARINOS" position="-0.4 2.5 -2"></a-text>
-            <a-asset-item id="pickrick" src="img/pickrick.glb">
-            </a-asset-item>
-              <a-entity gltf-model="#pickrick" scale="0.01 0.01 0.01" position="-1 0 -3" modify-materials></a-entity>        
-            <a-sky src="#manizales" id="sky" ></a-sky>
+            <a-sky src="#pacific" id="sky" ></a-sky>
             <a-camera>
-                <a-cursor color="blue"></a-cursor>
+                <a-cursor color="red"></a-cursor>
             </a-camera>
         </a-scene>
     </main>
