--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
@@ -19,8 +19,8 @@
     <div id="contenedor">
         <p>
             <button type="button1" id="ejerciciouno" class="btn btn-primary btn-lg">Animales Marinos</button>
-            <button type="button2" id="ejerciciodos" class="btn btn-success btn-lg">Estaciones del año</button>
-            <button type="button3" id="ejerciciotres" class="btn btn-warning btn-lg">Partes del cuerpo</button>
+            <button type="button2" id="ejerciciodos" class="btn btn-success btn-lg">Mi vecindario</button>
+            <button type="button3" id="ejerciciotres" class="btn btn-warning btn-lg">Baila !</button>
             <button type="button4" id="ejerciciocuatro" class="btn btn-info btn-lg">Preposiciones</button>
         </p>
         <div id="contenedorejercicio"></div>
