--- a/animalesmarinos.html
+++ b/animalesmarinos.html
@@ -3,23 +3,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
 </head>
 <body>
-    <script>
-        AFRAME.registerComponent('modify-materials', {
-          init: function () {
-            // Wait for model to load.
-            this.el.addEventListener('model-loaded', () => {
-              // Grab the mesh / scene.
-              const obj = this.el.getObject3D('mesh');
-              // Go over the submeshes and modify materials we want.
-              obj.traverse(node => {
-                if (node.name.indexOf('ship') !== -1) {
-                  node.material.color.set('red');
-                }
-              });
-            });
-          }
-        });
-    </script>
     <main>
         <a-scene>
             <a-entity text="value: Hello World;"></a-entity>
@@ -29,8 +12,13 @@
             </a-assets>
               <a-image src="#pacific" position="-1.5 1.8 -3" onclick="show('pacific')" ></a-image>
               <a-image src="#artic" position="0 1.8 -3" onclick="show('artic')"></a-image>
-                <a-text font="mozillavr" color="blue" value="LOS ANIMALES MARINOS" position="-0.4 2.5 -2"></a-text>
-            <a-sky src="#pacific" id="sky" ></a-sky>
+            <a-assets> 
+              <a-asset-item id = "tree" src = "img/fish.gltf"> 
+              </a-asset-item > 
+            </a-assets >
+              <a-entity  gltf-model = "#tree" position="0 1.8 -3"> </a-entity > 
+              <a-text font="mozillavr" color="blue" value="MARINE ANIMALS" position="-1.3 2.5 -2"></a-text>
+            <a-sky src="#artic" id="sky" ></a-sky>
             <a-camera>
                 <a-cursor color="red"></a-cursor>
             </a-camera>
