added a test song

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
-<body>
+<body id="body">
     <div class="topnav">
         <h1 class="logo">Virtual city</h1>
      
