--- a/vecindario.html
+++ b/vecindario.html
@@ -39,6 +39,7 @@
               <a-image src="#park" position="-1.2 0.5 -3" onclick="show('park')"></a-image>
               <a-image src="#petshop" position="0.3 0.5 -3" onclick="show('petshop')"></a-image>
               <a-image src="#toystore" position="1.8 0.5 -3" onclick="show('toystore')"></a-image>
+              <a-entity scale="0.3 0.3 0.3" position="-2.3 0.5 -3" geometry="primitive: sphere" onclick="location.reload()"   material="color:purple"></a-entity>
                 <a-text font="mozillavr" color="orange" value="MY NEIGHBORHOOD" position="-0.4 2.8 -2"></a-text>
                 <a-text font="mozillavr" color="orange" value="Market" position="-2.5 2.2 -3"></a-text>
                 <a-text font="mozillavr" color="orange" value="Library" position="-1 2.2 -3"></a-text>
@@ -47,6 +48,7 @@
                 <a-text font="mozillavr" color="orange" value="Park" position="-1.7 0.9 -3"></a-text>
                 <a-text font="mozillavr" color="orange" value="Pet shop" position="-0.2 0.9 -3"></a-text>
                 <a-text font="mozillavr" color="orange" value="Toy store" position="1.3 0.9 -3"></a-text>
+                <a-text font="mozillavr" color="yellow" value="Back" position="-2.2 0.7 -2.5" rotation="0 30 0"></a-text>
             <a-sky src="#library" id="sky" ></a-sky>
             <a-camera>
                 <a-cursor color="blue"></a-cursor>
