--- a/animalesmarinos.html
+++ b/animalesmarinos.html
@@ -9,15 +9,14 @@
             <a-assets>
                 <img id="pacific" src="img/pacificocean.jpg">
                 <img id="artic" src="img/articocean.jpg" >
+                <audio id="song" src="img/song.mp3" preload="auto" volume=2></audio>
             </a-assets>
-              <a-image src="#pacific" position="-1.5 1.8 -3" onclick="show('pacific')" ></a-image>
+              <a-image src="#pacific" position="-1.5 1.8 -3" onclick="show('pacific')"></a-image>
               <a-image src="#artic" position="0 1.8 -3" onclick="show('artic')"></a-image>
-            <a-assets> 
-              <a-asset-item id = "tree" src = "img/fish.gltf"> 
-              </a-asset-item > 
-            </a-assets >
-              <a-entity  gltf-model = "#tree" position="0 1.8 -3"> </a-entity > 
+              <a-entity id="river" geometry="primitive: plane" material="color: blue" position="-10 0 0" sound="src: #song; autoplay: true"></a-entity>
+              <a-entity scale="0.3 0.3 0.3" position="-2.5 2.5 -2" geometry="primitive: sphere" onclick="location.reload()"   material="color:purple"></a-entity>
               <a-text font="mozillavr" color="blue" value="MARINE ANIMALS" position="-1.3 2.5 -2"></a-text>
+              <a-text font="mozillavr" color="yellow" value="Back" position="-2.2 2.5 -1.5" rotation="0 30 0"></a-text>
             <a-sky src="#artic" id="sky" ></a-sky>
             <a-camera>
                 <a-cursor color="red"></a-cursor>
