added fusing event

--- a/preposiciones.html
+++ b/preposiciones.html
@@ -18,7 +18,7 @@
                 <a-text font="mozillavr" color="purple" value="UNDER" rotation="0 0 0" position="0 1 -3"></a-text>
                 <a-text font="mozillavr" color="purple" value="BEHIND" rotation="0 -90 0" position="1.7 1.3 -0.5"></a-text>
                 <a-text font="mozillavr" color="yellow" value="Back" position="-2.7 2.5 -1.5" rotation="0 30 0"></a-text>
-                <a-entity scale="0.6 1.3 0.6" position="-2 1.2 0" geometry="primitive: box" onclick="crearFigura('infront','cylinder','yellow','0.3 0.3 0.3','-1.2 0.3 0')"  material="opacity: 0" sound="src: #front; on: click"></a-entity>
+                <a-entity scale="0.6 1.3 0.6" position="-2 1.2 0" geometry="primitive: box" onclick="crearFigura('infront','cylinder','yellow','0.3 0.3 0.3','-1.2 0.3 0')"  material="opacity: 0"></a-entity>
                 <a-entity scale="0.3 0.3 0.3" position="-3 2.5 -2" geometry="primitive: sphere" onclick="location.reload()"   material="color:purple"></a-entity>
                 <a-asset-item id="pickrick" src="img/pickrick.glb">
                 </a-asset-item>
