--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="contenedor">
         <p>
             <button type="button1" id="ejerciciouno" class="btn btn-primary btn-lg">Animales Marinos</button>
-            <button type="button2" id="ejerciciodos" class="btn btn-success btn-lg">Mi vecindario</button>
+            <button type="button2" id="ejerciciodos"class="btn btn-success btn-lg">Mi vecindario</button>
             <button type="button3" id="ejerciciotres" class="btn btn-warning btn-lg">Baila !</button>
             <button type="button4" id="ejerciciocuatro" class="btn btn-info btn-lg">Preposiciones</button>
         </p>
@@ -27,8 +27,10 @@
     </div>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
-    <script src="js/CargarEjercicio.js"></script>
+    <script src="js/cargapagina.js"></script>
     <script src="js/cargatematica.js"></script>
-    <script src="js/tour.js"></script>
+    <script src="js/cambiarsky.js"></script>
+    <script src="js/mostrartexto.js"></script>
+    <script src="js/crearentidad.js"></script>
 </body>
 </html>
