--- a/vecindario.html
+++ b/vecindario.html
@@ -3,26 +3,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
 </head>
 <body>
-    <script>
-        AFRAME.registerComponent('modify-materials', {
-          init: function () {
-            // Wait for model to load.
-            this.el.addEventListener('model-loaded', () => {
-              // Grab the mesh / scene.
-              const obj = this.el.getObject3D('mesh');
-              // Go over the submeshes and modify materials we want.
-              obj.traverse(node => {
-                if (node.name.indexOf('ship') !== -1) {
-                  node.material.color.set('red');
-                }
-              });
-            });
-          }
-        });
-    </script>
     <main>
         <a-scene>
-            <a-entity text="value: Hello World;"></a-entity>
             <a-assets>
                 <img id="market" src="img/supermarket.jpg">
                 <img id="library" src="img/library.jpg" >
@@ -49,9 +31,9 @@
                 <a-text font="mozillavr" color="orange" value="Pet shop" position="-0.2 0.9 -3"></a-text>
                 <a-text font="mozillavr" color="orange" value="Toy store" position="1.3 0.9 -3"></a-text>
                 <a-text font="mozillavr" color="yellow" value="Back" position="-2.2 0.7 -2.5" rotation="0 30 0"></a-text>
-            <a-sky src="#library" id="sky" ></a-sky>
+            <a-sky src="#library" id="sky"></a-sky>
             <a-camera>
-                <a-cursor color="blue"></a-cursor>
+              <a-cursor color="yellow" fuse=true fuseTimeout="800" ></a-cursor>
             </a-camera>
         </a-scene>
     </main>
