added fusing event complete

--- a/animalesmarinos.html
+++ b/animalesmarinos.html
@@ -19,7 +19,7 @@
               <a-text font="mozillavr" color="yellow" value="Back" position="-2.2 2.5 -1.5" rotation="0 30 0"></a-text>
             <a-sky src="#artic" id="sky" ></a-sky>
             <a-camera>
-                <a-cursor color="red"></a-cursor>
+                <a-cursor color="yellow" fuse=true fuseTimeout="800" ></a-cursor>
             </a-camera>
         </a-scene>
     </main>
