--- a/preposiciones.html
+++ b/preposiciones.html
@@ -34,7 +34,7 @@
                 <a-entity gltf-model="#mickey" scale="0.8 0.8 0.8" onclick="crearFigura('under','box','red','3 1 1','1.4 0 -8')" position="0.9 1.5 -8" rotation="0 0 0" modify-materials></a-entity>          
             <a-sky src="#preposiciones" id="sky" ></a-sky>
             <a-camera>
-                <a-cursor color="red"></a-cursor>
+                <a-cursor color="yellow" fuse=true fuseTimeout="800" ></a-cursor>
             </a-camera>
         </a-scene>
     </main>
