working on read json method

--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
     <script src="js/cambiarsky.js"></script>
     <script src="js/mostrartexto.js"></script>
     <script src="js/crearentidad.js"></script>
+    <script src="js/cambiaobjeto.js"></script>
 </body>
 </html>
