--- a/animalesmarinos.html
+++ b/animalesmarinos.html
@@ -1,34 +1,47 @@
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
     <main>
         <a-scene>
             <a-assets>
                 <img id="pacific" src="img/pacificocean.jpg">
-                <img id="artic" src="img/articocean.jpg" >
+                <img id="artic" src="img/articocean.jpg">
                 <audio id="song" src="img/song.mp3" preload="auto" volume=2></audio>
             </a-assets>
-              <a-image src="#pacific" position="-1.5 1.8 -3" onclick="show('pacific')"></a-image>
-              <a-image src="#artic" position="0 1.8 -3" onclick="show('artic')"></a-image>
-              <a-entity id="river" geometry="primitive: plane" material="color: blue" position="-10 0 0"></a-entity>
-              <a-entity scale="0.3 0.3 0.3" position="-2.5 2.5 -2" geometry="primitive: sphere" onclick="location.reload()"   material="color:purple"></a-entity>
-              <a-text font="mozillavr" color="blue" value="MARINE ANIMALS" position="-1.3 2.5 -2"></a-text>
-              <a-text font="mozillavr" color="yellow" value="Back" position="-2.2 2.5 -1.5" rotation="0 30 0"></a-text>
-              <a-asset-item id="fish" src="img/fish1.glb">
-              </a-asset-item>
-              <a-asset-item id="dory" src="img/fish2.glb">
-              </a-asset-item>
-              <a-asset-item id="octopus" src="img/octopus.glb">
-              </a-asset-item>
-              <a-asset-item id="shark" src="img/shark.glb">
-              </a-asset-item>                                                        
-            <a-sky src="#artic" id="sky" ></a-sky>
+            <a-image src="#pacific" position="-1.5 1.8 -3" onclick="show('pacific')"></a-image>
+            <a-image src="#artic" position="0 1.8 -3" onclick="show('artic')"></a-image>
+            <a-entity id="river" geometry="primitive: plane" material="color: blue" position="-10 0 0"></a-entity>
+            <a-entity scale="0.3 0.3 0.3" position="-2.5 2.5 -2" geometry="primitive: sphere"
+                onclick="location.reload()" material="color:purple"></a-entity>
+            <a-text font="mozillavr" color="blue" value="MARINE ANIMALS" position="-1.3 2.5 -2"></a-text>
+            <a-text font="mozillavr" color="yellow" value="Back" position="-2.2 2.5 -1.5" rotation="0 30 0"></a-text>
+            <a-asset-item id="fish" src="img/fish1.glb">
+            </a-asset-item>
+            <a-asset-item id="dory" src="img/fish2.glb">
+            </a-asset-item>
+            <a-asset-item id="octopus" src="img/octopus.glb">
+            </a-asset-item>
+            <a-asset-item id="shark" src="img/shark.glb">
+            </a-asset-item>
+            <a-asset-item id="crab" src="img/crab.glb">
+            </a-asset-item>
+            <a-asset-item id="jellyfish1" src="img/jellyfish1.glb">
+            </a-asset-item>
+            <a-asset-item id="jellyfish2" src="img/jellyfish2.glb">
+            </a-asset-item>
+            <a-asset-item id="pezglobo" src="img/pezglobo.glb">
+            </a-asset-item>
+            
+
+            <a-sky src="#artic" id="sky"></a-sky>
             <a-camera>
-                <a-cursor color="yellow" fuse=true fuseTimeout="500" ></a-cursor>
+                <a-cursor color="yellow" fuse=true fuseTimeout="500"></a-cursor>
             </a-camera>
         </a-scene>
     </main>
 </body>
+
 </html>
