--- a/preposiciones.html
+++ b/preposiciones.html
@@ -18,7 +18,7 @@
                 <a-text font="mozillavr" color="purple" value="UNDER" rotation="0 0 0" position="0 1 -3"></a-text>
                 <a-text font="mozillavr" color="purple" value="BEHIND" rotation="0 -90 0" position="1.7 1.3 -0.5"></a-text>
                 <a-text font="mozillavr" color="yellow" value="Back" position="-2.7 2.5 -1.5" rotation="0 30 0"></a-text>
-                <a-entity scale="0.6 1.3 0.6" position="-2 1.2 0" geometry="primitive: box" onclick="crearFigura('infront','cylinder','yellow','0.3 0.3 0.3','-1.2 0.3 0')"  material="opacity: 0"></a-entity>
+                <a-entity scale="0.6 1.3 0.6" position="-2 1.2 0" geometry="primitive: box" onclick="crearFigura('cylinder','yellow','0.3 0.3 0.3','-1.2 0.3 0')"  material="opacity: 0"></a-entity>
                 <a-entity scale="0.3 0.3 0.3" position="-3 2.5 -2" geometry="primitive: sphere" onclick="location.reload()"   material="color:purple"></a-entity>
                 <a-asset-item id="pickrick" src="img/pickrick.glb">
                 </a-asset-item>
@@ -28,10 +28,10 @@
                 </a-asset-item>
                 <a-asset-item id="mickey" src="img/mickey.glb">
                 </a-asset-item>
-                <a-entity gltf-model="#pickrick" scale="0.01 0.01 0.01" onclick="crearFigura('next','box','green','0.5 0.5 0.5','-1.8 1 2')" position="-2 1.2 1.5" rotation="0 90 0" modify-materials></a-entity>          
-                <a-entity gltf-model="#boxin" scale="0.7 0.7 0.7" onclick="crearFigura('in','sphere','pink','0.4 0.4 0.4','-0.5 0.5 7')" position="-0.5 0.5 7" rotation="0 90 -90" material="opacity: 0.1" modify-materials></a-entity>
-                <a-entity gltf-model="#duck" scale="0.3 0.3 0.3" onclick="crearFigura('behind','torus','blue','1.3 1.3 1.3','5 2 0')" position="2 1.3 0" rotation="0 -90 0" modify-materials></a-entity>
-                <a-entity gltf-model="#mickey" scale="0.8 0.8 0.8" onclick="crearFigura('under','box','red','3 1 1','1.4 0 -8')" position="0.9 1.5 -8" rotation="0 0 0" modify-materials></a-entity>          
+                <a-entity gltf-model="#pickrick" scale="0.01 0.01 0.01" onclick="crearFigura('box','green','0.5 0.5 0.5','-1.8 1 2')" position="-2 1.2 1.5" rotation="0 90 0" modify-materials></a-entity>          
+                <a-entity gltf-model="#boxin" scale="0.7 0.7 0.7" onclick="crearFigura('sphere','pink','0.4 0.4 0.4','-0.5 0.5 7')" position="-0.5 0.5 7" rotation="0 90 -90" material="opacity: 0.1" modify-materials></a-entity>
+                <a-entity gltf-model="#duck" scale="0.3 0.3 0.3" onclick="crearFigura('torus','blue','1.3 1.3 1.3','5 2 0')" position="2 1.3 0" rotation="0 -90 0" modify-materials></a-entity>
+                <a-entity gltf-model="#mickey" scale="0.8 0.8 0.8" onclick="crearFigura('box','red','3 1 1','1.4 0 -8')" position="0.9 1.5 -8" rotation="0 0 0" modify-materials></a-entity>          
             <a-sky src="#preposiciones" id="sky" ></a-sky>
             <a-camera>
                 <a-cursor color="yellow" fuse=true fuseTimeout="800" ></a-cursor>
