Added marine 3D models

--- a/animalesmarinos.html
+++ b/animalesmarinos.html
@@ -16,17 +16,27 @@
               <a-entity scale="0.3 0.3 0.3" position="-2.5 2.5 -2" geometry="primitive: sphere" onclick="location.reload()"   material="color:purple"></a-entity>
               <a-text font="mozillavr" color="blue" value="MARINE ANIMALS" position="-1.3 2.5 -2"></a-text>
               <a-text font="mozillavr" color="yellow" value="Back" position="-2.2 2.5 -1.5" rotation="0 30 0"></a-text>
-              <a-asset-item id="fish" src="img/fish1.glb">
-              </a-asset-item>
-              <a-asset-item id="dory" src="img/fish2.glb">
+              <a-asset-item id="fish" src="img/fish.glb">
               </a-asset-item>
               <a-asset-item id="octopus" src="img/octopus.glb">
               </a-asset-item>
               <a-asset-item id="shark" src="img/shark.glb">
-              </a-asset-item>                                                        
+              </a-asset-item> 
+              <a-asset-item id="crab" src="img/crab.glb">
+              </a-asset-item>  
+              <a-asset-item id="jellyfish" src="img/jellyfish2.glb">
+              </a-asset-item>  
+              <a-asset-item id="globefish1" src="img/pezglobo.glb">
+              </a-asset-item>  
+              <a-asset-item id="seahorse" src="img/seahorse.glb">
+              </a-asset-item>  
+              <a-asset-item id="starfish" src="img/starfish1.glb">
+              </a-asset-item>
+              <a-asset-item id="whale" src="img/whale.glb">
+              </a-asset-item>                                                           
             <a-sky src="#artic" id="sky" ></a-sky>
             <a-camera>
-                <a-cursor color="yellow" fuse=true fuseTimeout="500" ></a-cursor>
+                <a-cursor color="yellow" fuse=true fuseTimeout="800" ></a-cursor>
             </a-camera>
         </a-scene>
     </main>
