modificación de menú

--- a/animalesmarinos.html
+++ b/animalesmarinos.html
@@ -20,7 +20,7 @@
             <a-text font="mozillavr" color="yellow" value="Back" position="-2.2 2.5 -1.5" rotation="0 30 0"></a-text>
             <a-asset-item id="fish" src="img/fish1.glb">
             </a-asset-item>
-            <a-asset-item id="dory" src="img/fish2.glb">
+            <a-asset-item id="dory" src="img/dori.glb">
             </a-asset-item>
             <a-asset-item id="octopus" src="img/octopus.glb">
             </a-asset-item>
@@ -34,8 +34,14 @@
             </a-asset-item>
             <a-asset-item id="pezglobo" src="img/pezglobo.glb">
             </a-asset-item>
-            
-
+            <a-asset-item id="whale" src="img/whale.glb">
+            </a-asset-item>
+            <a-asset-item id="turtle" src="img/turtle.glb">
+            </a-asset-item>
+            <a-asset-item id="seahorse" src="img/seahorse.glb">
+            </a-asset-item>
+            <a-asset-item id="starfish1" src="img/starfish1.glb">
+            </a-asset-item>
             <a-sky src="#artic" id="sky"></a-sky>
             <a-camera>
                 <a-cursor color="yellow" fuse=true fuseTimeout="500"></a-cursor>
