--- a/baila.html
+++ b/baila.html
@@ -7,11 +7,13 @@
         <a-scene>
             <a-assets>
                 <img id="setdance" src="img/dance.jpg">
-                <audio id="song" src="img/song.mp3" preload="auto" volume=3></audio>
+                <audio id="song" preload="auto" crossorigin="anonymous" src="img/babyshark.mp3"></audio>
+                </audio>
             </a-assets>
-              <a-entity scale="0.3 0.3 0.3" position="-2.3 0.5 -3" geometry="primitive: sphere" onclick="location.reload()"   material="color:purple" sound="src: #song"></a-entity>
+              <a-entity scale="0.3 0.3 0.3" position="-2.3 3.1 -3" geometry="primitive: sphere" onclick="location.reload()"   material="color:purple"></a-entity>
+              <a-sphere position="0 1.25 -5" radius="1.25" material="opacity:0" color="#EF2D5E" sound="autoplay: true; src: #song"></a-sphere>
                 <a-text font="mozillavr" color="orange" value="!!Baila!!" position="-0.4 2.8 -2"></a-text>
-                <a-text font="mozillavr" color="yellow" value="Back" position="-2.2 0.7 -2.5" rotation="0 30 0"></a-text>
+                <a-text font="mozillavr" color="yellow" value="Back" position="-2.2 3.1 -2.5" rotation="0 30 0"></a-text>
             <a-sky src="#setdance" id="sky"></a-sky>
             <a-camera>
               <a-cursor color="yellow" fuse=true fuseTimeout="800" ></a-cursor>
