--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
     <script src="js/mostrartexto.js"></script>
     <script src="js/crearentidad.js"></script>
     <script src="js/cambiaobjeto.js"></script>
+    <script src="js/cambiaskyvecindario.js"></script>
 </body>
 </html>
