--- a/vecindario.html
+++ b/vecindario.html
@@ -14,13 +14,13 @@
                 <img id="petshop" src="img/petshop.jpg" >
                 <img id="toystore" src="img/toystore.jpg" >
             </a-assets>
-              <a-image src="#market" position="-2 1.8 -3" onclick="show('market')" ></a-image>
-              <a-image src="#library" position="-0.5 1.8 -3" onclick="show('library')"></a-image>
-              <a-image src="#church" position="1 1.8 -3" onclick="show('church')"></a-image>
-              <a-image src="#hospital" position="2.5 1.8 -3" onclick="show('hospital')"></a-image>
-              <a-image src="#park" position="-1.2 0.5 -3" onclick="show('park')"></a-image>
-              <a-image src="#petshop" position="0.3 0.5 -3" onclick="show('petshop')"></a-image>
-              <a-image src="#toystore" position="1.8 0.5 -3" onclick="show('toystore')"></a-image>
+              <a-image src="#market" position="-2 1.8 -3" onclick="showNeighb('market')" ></a-image>
+              <a-image src="#library" position="-0.5 1.8 -3" onclick="showNeighb('library')"></a-image>
+              <a-image src="#church" position="1 1.8 -3" onclick="showNeighb('church')"></a-image>
+              <a-image src="#hospital" position="2.5 1.8 -3" onclick="showNeighb('hospital')"></a-image>
+              <a-image src="#park" position="-1.2 0.5 -3" onclick="showNeighb('park')"></a-image>
+              <a-image src="#petshop" position="0.3 0.5 -3" onclick="showNeighb('petshop')"></a-image>
+              <a-image src="#toystore" position="1.8 0.5 -3" onclick="showNeighb('toystore')"></a-image>
               <a-entity scale="0.3 0.3 0.3" position="-2.3 0.5 -3" geometry="primitive: sphere" onclick="location.reload()"   material="color:purple"></a-entity>
                 <a-text font="mozillavr" color="orange" value="MY NEIGHBORHOOD" position="-0.4 2.8 -2"></a-text>
                 <a-text font="mozillavr" color="orange" value="Market" position="-2.5 2.2 -3"></a-text>
