--- a/index.html
+++ b/index.html
@@ -7,25 +7,82 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body id="body">
-    <div class="topnav">
-        <h1 class="logo">Virtual city</h1>
-     
+    <nav class="navbar navbar-inverse navbar-expand-xl navbar-dark">
+        <div class="navbar-header d-flex col">
+            <a class="navbar-brand" href="#"><i class="fa fa-cube"></i>Virtual<b>City</b></a>
+            <button type="button" data-target="#navbarCollapse" data-toggle="collapse"
+                class="navbar-toggle navbar-toggler ml-auto">
+                <span class="navbar-toggler-icon"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <!-- Collection of nav links, forms, and other content for toggling -->
+        <div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
+            <ul class="nav navbar-nav navbar-right ml-auto">
+                <li class="nav-item active"><a href="index.html" class="nav-link"><i
+                            class="fa fa-home"></i><span>Home</span></a></li>
+                <li class="nav-item"><a href="#" class="nav-link"><i class="fa fa-users"></i><span>Nosotros</span></a>
+                </li>
+                <li class="nav-item"><a href="#" class="nav-link"><i
+                            class="fa fa-briefcase"></i><span>Instrucciones</span></a></li>
+                <li class="nav-item dropdown">
+                    <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle user-action"><img
+                            src="img/nino.png" class="avatar" alt="Avatar">Natalia<b class="caret"></b></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+        <div class="container">
+            <div class="row">
+                <a class="navbar-brand" href="#"><i class="fa fa-cube"></i>Bienvenid@</a>
+            </div>
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="slide" src="./img/img1.jpeg" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="slide" src="./img/img2.jpeg" alt="Second slide">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+            <hr class="mt-0 mb-3   ">
+        <ul>
+            <li><button type="button1" id="ejerciciouno" class="btn btn-primary btn-lg">Animales Marinos</button></li>
+            <br>
+            <li><button type="button2" id="ejerciciodos" class="btn btn-success btn-lg">Mi vecindario</button></li>
+            <br>
+            <li><button type="button3" id="ejerciciotres" class="btn btn-warning btn-lg">Baila !</button></li>
+            <br>
+            <li> <button type="button4" id="ejerciciocuatro" class="btn btn-info btn-lg">Preposiciones</button></li>       
+        </ul>
     </div>
-    <div id="contenedor">
-        <p>
-            <button type="button1" id="ejerciciouno" class="btn btn-primary btn-lg">Animales Marinos</button>
-            <button type="button2" id="ejerciciodos"class="btn btn-success btn-lg">Mi vecindario</button>
-            <button type="button3" id="ejerciciotres" class="btn btn-warning btn-lg">Baila !</button>
-            <button type="button4" id="ejerciciocuatro" class="btn btn-info btn-lg">Preposiciones</button>
-        </p>
-        <div id="contenedorejercicio"></div>
-    </div>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <div id="contenedorejercicio"></div>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
     <script src="js/cargapagina.js"></script>
     <script src="js/cargatematica.js"></script>
