modified modules names

--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
-            <hr class="mt-0 mb-3   ">
+            <br>
         <ul>
-            <li><button type="button1" id="ejerciciouno" class="btn btn-primary btn-lg">Animales Marinos</button></li>
+            <li><button type="button1" id="ejerciciouno" class="btn btn-primary btn-lg">Marine Animals</button></li>
             <br>
-            <li><button type="button2" id="ejerciciodos" class="btn btn-success btn-lg">Mi vecindario</button></li>
+            <li><button type="button2" id="ejerciciodos" class="btn btn-success btn-lg">My Neighborhood</button></li>
             <br>
-            <li><button type="button3" id="ejerciciotres" class="btn btn-warning btn-lg">Baila !</button></li>
+            <li><button type="button3" id="ejerciciotres" class="btn btn-warning btn-lg">Dance !</button></li>
             <br>
-            <li> <button type="button4" id="ejerciciocuatro" class="btn btn-info btn-lg">Preposiciones</button></li>       
+            <li> <button type="button4" id="ejerciciocuatro" class="btn btn-info btn-lg">Prepositions</button></li>       
         </ul>
     </div>
     <div id="contenedorejercicio"></div>
